docs: 更新 README 文档，反映 ionet 25.2 框架迁移