@@ -1,6 +1,8 @@
 # 逍遥游：自动悟道 - 游戏服务端
 
-基于 [ioGame](https://github.com/iohao/ioGame) 框架开发的修仙放置类游戏服务端。
+基于 [ionet](https://github.com/iohao/ionet) 框架开发的修仙放置类游戏服务端。
+
+ionet 是一个轻量级无锁异步化、事件驱动的 Java 分布式网络编程框架，支持**纳秒级端到端延迟**。
 
 ## 项目结构
 
@@ -10,18 +12,14 @@ xiaoyao-server/
 ├── xiaoyao-common/            # 公共模块
 │   ├── cmd/                   # 路由命令定义
 │   ├── proto/                 # 协议消息 (Protobuf)
-│   ├── error/                 # 错误码定义
-│   └── util/                  # 工具类
+│   └── error/                 # 错误码定义
 │
 ├── xiaoyao-logic/             # 逻辑服模块
-│   ├── player/                # 玩家模块
-│   ├── realm/                 # 境界模块
-│   ├── combat/                # 战斗模块
-│   ├── inventory/             # 背包模块
-│   └── ...                    # 其他业务模块
+│   ├── player/                # 玩家模块 (Action + Service)
+│   ├── realm/                 # 境界模块 (修炼/突破)
+│   └── HallLogicServer.java   # 逻辑服配置
 │
-├── xiaoyao-external/          # 对外服模块
-│   └── server/                # WebSocket 网关
+├── xiaoyao-external/          # 对外服模块 (WebSocket 网关)
 │
 └── xiaoyao-starter/           # 启动模块
     └── XiaoyaoApplication     # 主启动类
@@ -29,41 +27,44 @@ xiaoyao-server/
 
 ## 技术栈
 
-- **框架**: ioGame 21.19
-- **Java**: JDK 21+
-- **网络**: Netty + WebSocket
+- **框架**: ionet 25.2
+- **Java**: JDK 25
+- **网络**: Aeron + Netty WebSocket
 - **序列化**: Protobuf (JProtobuf)
-- **数据库**: MySQL + MyBatis-Plus
-- **缓存**: Redis (Redisson)
+- **数据库**: MySQL + MyBatis-Plus (待接入)
+- **缓存**: Redis (Redisson) (待接入)
 - **日志**: SLF4J + Logback
 
 ## 快速开始
 
 ### 环境要求
 
-- JDK 21 或更高版本
-- Maven 3.8+
-- MySQL 8.0+ (可选，目前使用内存存储)
-- Redis 6.0+ (可选)
+- **JDK 25** (ionet 要求)
+- Maven 3.9+
 
 ### 编译项目
 
 ```bash
 cd xiaoyao-server
-mvn clean install -DskipTests
+mvn clean compile
 ```
 
 ### 运行服务器
 
+需要添加 VM options 启动参数：
+
 ```bash
-cd xiaoyao-starter
-mvn exec:java -Dexec.mainClass="com.xiaoyao.starter.XiaoyaoApplication"
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED \
+     --enable-native-access=ALL-UNNAMED \
+     -cp "xiaoyao-starter/target/classes:xiaoyao-starter/target/lib/*" \
+     com.xiaoyao.starter.XiaoyaoApplication
 ```
 
-或者使用打包后的 JAR：
+或者在 IntelliJ IDEA 中配置 VM options：
 
-```bash
-java -jar xiaoyao-starter/target/xiaoyao-starter-1.0.0-SNAPSHOT.jar
+```
+--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
 ```
 
 ### 客户端连接
@@ -77,6 +78,7 @@ ws://127.0.0.1:10100/websocket
 ## 已实现的功能
 
 ### 玩家模块 (cmd=2)
+
 | 子命令 | 功能 | 说明 |
 |--------|------|------|
 | 1 | 登录 | 使用设备ID登录，自动创建新玩家 |
@@ -84,28 +86,50 @@ ws://127.0.0.1:10100/websocket
 | 5 | 心跳 | 保持连接活跃 |
 
 ### 境界模块 (cmd=11)
+
 | 子命令 | 功能 | 说明 |
 |--------|------|------|
 | 1 | 修炼 | 领取挂机经验 |
-| 2 | 突破 | 境界突破 |
+| 2 | 突破 | 境界突破 (108 个境界) |
 
 ## 开发说明
 
-### 新增模块
+### 新增 Action
 
 1. 在 `xiaoyao-common/cmd/` 创建命令接口
 2. 在 `xiaoyao-common/proto/` 创建协议消息
-3. 在 `xiaoyao-logic/` 创建 Action 和 Service
-4. 在 `LogicServer.java` 中添加 Action 扫描
+3. 在 `xiaoyao-logic/` 创建 Action 类：
+
+```java
+@ActionController(YourCmd.cmd)
+public class YourAction {
+    @ActionMethod(YourCmd.method)
+    public YourResp yourMethod(YourReq req, FlowContext ctx) {
+        // 业务逻辑
+        return resp;
+    }
+}
+```
+
+4. 在 `HallLogicServer.java` 中添加 Action 扫描
 
 ### 错误处理
 
-使用统一错误码，在 `xiaoyao-common/error/` 定义：
+使用 ionet 的断言机制：
 
 ```java
-throw new MsgException(PlayerError.PLAYER_NOT_FOUND);
+// 断言方式
+PlayerError.PLAYER_NOT_FOUND.assertNonNull(player);
+
+// 或抛出异常
+throw new MessageException(PlayerError.PLAYER_NOT_FOUND);
 ```
+
+## 相关链接
+
+- [ionet 官方文档](https://iohao.github.io/ionet)
+- [ionet GitHub](https://github.com/iohao/ionet)
 
 ## License
 
-MIT
+AGPL-3.0 (遵循 ionet 框架许可)
